--- a/Lab2/Makefile
+++ b/Lab2/Makefile
@@ -1,11 +1,11 @@
-#Compiler and flags
+# Compiler and flags
 CC = gcc
-CFLAGS = -Wall -std=c99 -pedantic
+CFLAGS = -Wall -pedantic -std=c99
 
-#inlcude files directory
+# inlcude files directory, contains header files
 INCLUDES = -Iinclude
 
-#Directories with source code, object files and binary
+# Directories with source code, object files and binary
 SRCDIR = src/
 BINDIR = bin/
 OBJDIR = obj/
@@ -13,11 +13,11 @@ OBJDIR = obj/
 SOURCE = $(SRCDIR)store.c $(SRCDIR)book.c $(SRCDIR)boardgame.c 
 OBJS = $(OBJDIR)store.o $(OBJDIR)book.o $(OBJDIR)boardgame.o
 
-PROGNAME = $(BINDIR)main.out
+MAINPROG = $(BINDIR)main.out
 
 
 program: $(OBJS) $(OBJDIR)main.o
-	$(CC) $(OBJS) $(OBJDIR)main.o -o $(PROGNAME)
+	$(CC) $(OBJS) $(OBJDIR)main.o -o $(MAINPROG)
 
 $(OBJDIR)store.o: $(SRCDIR)store.c
 	$(CC) $(CFLAGS) $(INCLUDES) -c $(SRCDIR)store.c -o $(OBJDIR)store.o
@@ -32,4 +32,4 @@ $(OBJDIR)main.o: $(SRCDIR)main.c
 	$(CC) $(CFLAGS) $(INCLUDES) -c $(SRCDIR)main.c -o $(OBJDIR)main.o
 
 clean:
-	@rm $(OBJDIR)*.o $(PROGNAME)
+	@rm $(OBJDIR)*.o $(MAINPROG)
