--- a/Assignment1/Makefile
+++ b/Assignment1/Makefile
@@ -10,11 +10,11 @@ SRCDIR = src/
 BINDIR = bin/
 OBJDIR = obj/
 
-SOURCE = $(SRCDIR)traffic.c $(SRCDIR)testMain.c
-OBJS = $(OBJDIR)traffic.o
+SOURCE = $(SRCDIR)car.c $(SRCDIR)testMain.c
+OBJS = $(OBJDIR)car.o $(OBJDIR)linkedListAPI.o
 
-PROGNAME = $(BINDIR)main.out
-PROGTEST = $(BINDIR)testMain.out
+PROGNAME = $(BINDIR)main
+PROGTEST = $(BINDIR)testMain
 
 all: program test
 
@@ -24,8 +24,11 @@ program: $(OBJS) $(OBJDIR)main.o
 test: $(OBJS) $(OBJDIR)testMain.o
 	$(CC) $(OBJS) $(OBJDIR)testMain.o -o $(PROGTEST)
 
-$(OBJDIR)traffic.o: $(SRCDIR)traffic.c
-	$(CC) $(CFLAGS) $(INCLUDES) -c $(SRCDIR)traffic.c -o $(OBJDIR)traffic.o
+$(OBJDIR)car.o: $(SRCDIR)car.c
+	$(CC) $(CFLAGS) $(INCLUDES) -c $(SRCDIR)car.c -o $(OBJDIR)car.o
+
+$(OBJDIR)linkedListAPI.o : $(SRCDIR)linkedListAPI.c
+	$(CC) $(FLAGS) $(INCLUDES) -c $< -o $@
 
 $(OBJDIR)testMain.o: $(SRCDIR)testMain.c
 	$(CC) $(CFLAGS) $(INCLUDES) -c $(SRCDIR)testMain.c -o $(OBJDIR)testMain.o
